Add packages to support hierarchical regression and OLS

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,4 +2,5 @@
 FROM python:3.8-slim-buster
 RUN pip3 install inquirer subprocess32 numpy scipy pandas scikit-learn brainspace pymanopt==0.2.5
 RUN pip3 install h5py bctpy seaborn matplotlib
-COPY micaopen/sf_prediction /opt/micaopen/sf_prediction
+RUN pip3 install pymc3 statsmodels
+COPY sf_prediction /opt/micaopen/sf_prediction
