--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,78 @@
+arviz==0.12.1
+bcrypt==4.0.1
 bctpy==0.6.0
 blessed==1.20.0
 brainspace==0.1.10
+cachetools==5.3.1
+certifi==2022.9.24
+cffi==1.15.1
+cftime==1.6.2
+charset-normalizer==2.1.1
 contourpy==1.0.7
+coverage==6.5.0
+cryptography==38.0.3
 cycler==0.11.0
+deprecat==2.1.1
+dill==0.3.6
+exceptiongroup==1.0.2
+fastprogress==1.0.3
+filelock==3.12.2
 fonttools==4.39.4
+globus-sdk==3.14.0
+GPUtil==1.4.0
 h5py==3.8.0
+idna==3.4
 importlib-resources==5.12.0
+iniconfig==1.1.1
 inquirer==3.1.3
 joblib==1.2.0
 kiwisolver==1.4.4
 matplotlib==3.7.1
+netCDF4==1.6.4
 nibabel==5.1.0
-numpy==1.24.3
-packaging==23.1
+numpy==1.23.4
+packaging==23.0
 pandas==2.0.2
+paramiko==2.12.0
+parsl==2022.11.7
+patsy==0.5.3
 Pillow==9.5.0
+pluggy==1.0.0
+psutil==5.9.4
+pycparser==2.21
+PyJWT==2.6.0
 pymanopt==0.2.5
+pymc3==3.11.5
+PyNaCl==1.5.0
+pyOpenSSL==23.1.1
 pyparsing==3.0.9
+pytest==7.2.0
+pytest-cov==4.0.0
 python-dateutil==2.8.2
 python-editor==1.0.4
 pytz==2023.3
+pyzmq==25.0.0
 readchar==4.0.5
+requests==2.28.1
 scikit-learn==1.2.2
-scipy==1.10.1
+scipy==1.9.3
+seaborn==0.12.2
+semver==3.0.1
+setproctitle==1.3.2
 six==1.16.0
+statsmodels==0.14.0
 subprocess32==3.5.4
+tblib==1.7.0
+Theano-PyMC==1.1.2
 threadpoolctl==3.1.0
+tomli==2.0.1
+typeguard==2.13.3
+typing_extensions==4.4.0
 tzdata==2023.3
+urllib3==1.26.12
 vtk==9.2.6
 wcwidth==0.2.6
+wrapt==1.15.0
+xarray==2023.1.0
+xarray-einstats==0.5.1
 zipp==3.15.0
