--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ setproctitle==1.3.2
 six==1.16.0
 statsmodels==0.14.0
 subprocess32==3.5.4
+tabulate==0.8.10
 tblib==1.7.0
 Theano-PyMC==1.1.2
 threadpoolctl==3.1.0
